# quantumhall_matrixelements

./: .coverage  .gitignore  AGENTS.md  CITATION.cff  Checks_exchange_pwme.ipynb  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  docs.yml  release.yml
docs/: api.md  conf.py  conventions.md  index.md  plane_wave.md  symmetric_gauge.md
docs/_static/: custom.css
docs/examples/: README.rst  plot_diagonal_form_factors.py  print_macdonald_ritchie_tableII.py
examples/: README.rst  compare_exchange_backends.py  plot_exchange_kernels_radial.py  plot_form_factors_radial.py  plot_llll_coulomb_pseudopotentials.py  plot_selected_exchange_kernels.py  print_macdonald_ritchie_tableII.py
src/quantumhall_matrixelements/: __init__.py  _debug_symmetry.py  _ho.py  _materialize.py  _quadrature.py  _select.py  diagnostic.py  exchange_gausslag.py  exchange_hankel.py  exchange_laguerre.py  exchange_legendre.py  exchange_ogata.py  fock.py  fock_fast.py  planewave.py
src/quantumhall_matrixelements.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/quantumhall_matrixelements/symmetric/: __init__.py  density.py  disk_two_body.py  guiding_center.py  onebody.py  pseudopotentials.py
tests/: test_api_guards.py  test_coulomb_analytic_general.py  test_exchange_analytics.py  test_exchange_hankel.py  test_exchange_kernels.py  test_exchange_laguerre.py  test_exchange_legendre.py  test_exchange_ogata.py  test_fock_constructor.py  test_fock_fast.py  test_form_factors.py  test_symmetric_form_factors.py  test_symmetric_manybody.py  test_symmetric_onebody.py  test_symmetric_oracles.py  test_symmetric_pseudopotentials.py  test_symmetric_release_references.py  test_validation.py
validation/: Checks_exchange_pwme.ipynb  __init__.py  benchmark_exchange_backends.py  generate_symmetric_reference_data.py  symmetric_reference.py  symmetric_reference_data.json  validate_exchange_analytics.py  validate_symmetric_reference.py
