[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumhall_matrixelements"
version = "0.1.0"
description = "Landau-level plane-wave form factors and exchange kernels for quantum Hall systems."
readme = "README.md"
authors = [
  { name = "Tobias Wolf", email = "public@wolft.xyz" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["quantum Hall", "matrix elements", "form factors", "exchange kernels", "Landau levels"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "hankel>=1.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
  "build",
  "twine"
]

[project.urls]
Homepage = "https://github.com/wolft/quantumhall_matrixelements"
Issues = "https://github.com/wolft/quantumhall_matrixelements/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP", "SIM", "NPY", "PERF"]
ignore = ["E203"]

[tool.ruff.isort]
known-first-party = ["quantumhall_matrixelements"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=quantumhall_matrixelements --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["quantumhall_matrixelements"]

