[build-system]
requires = ["setuptools>=69", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantumhall_matrixelements"
description = "Landau-level plane-wave form factors and exchange kernels for quantum Hall systems."
readme = "README.md"
authors = [
  { name = "Tobias Wolf", email = "public@wolft.xyz" },
  { name = "Sparsh Mishra" }
]
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["quantum Hall", "matrix elements", "form factors", "exchange kernels", "Landau levels"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "hankel>=1.2",
  "numba>=0.59"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5.0",
  "mypy>=1.10",
  "mpmath>=1.3",
  "build",
  "twine"
]

[project.urls]
Homepage = "https://github.com/wolft/quantumhall_matrixelements"
Issues = "https://github.com/wolft/quantumhall_matrixelements/issues"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
extend-exclude = ["examples", "playground", "validation", "*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "NPY", "PERF"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["quantumhall_matrixelements"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --cov=quantumhall_matrixelements --cov-report=term-missing"
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/quantumhall_matrixelements"]
exclude = "^(playground/|tests/|validation/|examples/)"

[tool.coverage.run]
branch = true
source = ["quantumhall_matrixelements"]
